--- a/defaults/.jshintignore
+++ b/defaults/.jshintignore
@@ -1,8 +1,6 @@
-# Logs
 logs
 *.log
 
-# Runtime data
 pids
 *.pid
 *.seed
@@ -13,8 +11,6 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
 
 # node-waf configuration
 .lock-wscript
@@ -25,4 +21,4 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
-dist
+dist/**
