--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro": "^0.1.3"
   },
   "dependencies": {
+    "chalk": "^1.1.1",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.0.1"
   }
