--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "astro-jshint",
   "version": "2.0.2",
   "description": "Astro module for running jshint analysis over a javascript application",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "preinstall": "npm run transpile",
+
     "transpile": "astro babel",
+
     "prejshint": "npm run transpile",
     "jshint": "astro jshint",
+
     "test": "exit 0"
   },
   "repository": {
